fix(vinculacion): resolver hallazgos pendientes de revision
- Identidad estable para el rol global de alcalde via MayorRoleRegistry y chequeo por ID
- Gateway.mayorRoleId() lanza IllegalStateException ante desconexion distinguiendola de ausencia confirmada
- Dependencias obligatorias en DefaultLinkService eliminando ramas nulas y falsos exitos
- Advertencia al fallar resolucion de residentes en Towny y eliminacion de fallback inline en otro hilo
- Borrado condicional atomico en unlink con deleteByUuidIfMatches y propagacion de linkedAt
- Verificacion de version antes de invocar Discord y eliminacion de default en LinkService
- Ajuste de tests con conteo exacto de llamadas/resultados y verificacion exacta de roles revocados